--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,7 +1,7 @@
 ﻿name: Build, Test and Deploy a .NET Core WebApi to Azure App Service
 
 env: # Change these settings when you need to
-  ARTIFACT_NAME: bosmaatje-api
+  ARTIFACT_NAME: Bosmaatje-API
   DOTNET_CORE_VERSION: 8.0.x
   PUBLISH_DIRECTORY: "./out/publish"
 on:
